# screenshots-pipeline

./: .env.example  .gitignore  .lint.cfg  .pre-commit-config.yaml  main.py  pyproject.toml
src/: chain_executor.py  inputs.py  main.py  screenshots_maker.py
src/schemas/: config.py  flow.py  selectors.py
