[tool.poetry]
name = "screenshots-pipeline"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
playwright = "^1.52.0"
python-dotenv = "^1.1.0"
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
